# forge.service.research-core

./: .gitignore  README.md  funder_mcp.py  general_mcp.py  logging_config.py  logging_utils.py  pyproject.toml  requirements.txt  research_base.py  sample_mcp.py  server_utils.py  validators.py
.github/workflows/: ci.yml
frontend/: .gitignore  app.py  frontend.py  reflex.json  requirements.txt  rxconfig.py
frontend/services/: mcp.py
requirements/: dev.in  dev.txt  runtime.in  runtime.txt
tests/: test_coordinator.py  test_funder_coordinator.py  test_handshake.py  test_research_base.py  test_sample_server.py  test_validators.py
