[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "forge-service-research-core"
version = "0.2.0"
description = "Production-ready research MCP service building blocks"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Ubiquity Research Team"}
]
dependencies = [
  "fastmcp>=2.5.2,<3.0.0",
  "pydantic>=2.11.5,<3.0.0",
  "pydantic-settings>=2.9.1,<3.0.0",
  "structlog>=24.1.0,<25.0.0"
]

[project.optional-dependencies]
dev = [
  "pip-tools>=7.4.1,<8.0.0",
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.24.0,<0.25.0"
]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
filterwarnings = [
  "ignore::pydantic.PydanticDeprecatedSince20"
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"general_mcp.py" = "general_mcp.py"
"funder_mcp.py" = "funder_mcp.py"
"sample_mcp.py" = "sample_mcp.py"
"research_base.py" = "research_base.py"
"logging_config.py" = "logging_config.py"
"validators.py" = "validators.py"
