[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-service-research-core"
version = "0.2.0"
description = "Production-ready MCP research server examples with logging, validation, and tooling."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenAI", email = "support@openai.com"},
]
dependencies = [
    "fastmcp>=2.5.2,<3.0.0",
    "pydantic-settings>=2.9.1,<3.0.0",
    "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
dev = [
    "pip-tools>=7.4",
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.urls]
"Homepage" = "https://github.com/openai/forge.service.research-core"

[tool.setuptools]
py-modules = [
    "funder_mcp",
    "general_mcp",
    "logging_utils",
    "research_base",
    "sample_mcp",
    "server_utils",
]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
